gcc/testsuite/algol68/compile/error-conformance-clause-1.a68
{ This is an invalid program.  }
begin case
           if true then "foo" else 10 fi { dg-error "not a united mode" }
      in (string): skip,
         (int): skip
      esac
end
   
